# ruski

./: Cargo.toml  README.md
src/: evolution.rs  graph.rs  lib.rs  main.rs  parser.rs  pool.rs  reduction.rs  term.rs
