[package]
name = "ruski"
version = "0.0.1"
authors = ["johker <johannes.kern@zoho.com>"]
edition = "2018"
description = "RuSKI is an artificial chemistry based on SKI combinator calculus."
repository = "https://github.com/johker/ruski/"
license = "MIT"
keywords = ["combinators", "functional"]
readme = "README.md"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ruski"
path = "src/main.rs"


[dependencies]
log = "0.4"

tui-logger = "0.7"

tui = "0.17"
crossterm = "0.23"
tokio = { version = "1", features = ["full"] }

eyre = "0.6"
