[package]
name = "ruski"
version = "0.0.2"
authors = ["johker <johannes.kern@zoho.com>"]
edition = "2021"
description = "RuSKI is a simple implementation of combinator calculus."
repository = "https://github.com/johker/ruski/"
license = "MIT"
keywords = ["combinators", "functional"]
readme = "README.md"
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

